// tx.proto
package txpackage;
syntax = "proto3";

message Transaction {
    int32 version = 1;
    repeated TxIn vin  = 2;
    repeated TxOut vout  = 3;
    Data data = 4;
    uint32 magic = 5;
    int64 LockTime = 6;
}

message TxIn {
    OutPoint Prev_out_point = 1;
    bytes Script_sig = 2;
    uint32 Sequence = 3;
}

message TxOut {
    uint64 value = 1;
    bytes script_pub_key = 2;
}

message OutPoint {
    bytes Hash = 1;
    uint32 Index =2;
}

message Data {
    int32 type = 1;
    bytes content = 2;
}
